--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -29,6 +29,40 @@
   @media screen and (min-width:300px) and (max-width: 1231px)
     margin-top: 79px
 
+
+
+.hover_menu
+  display:block
+
+.dropdown-menu
+  position: absolute
+  top: 77%
+  left: 33px
+  z-index: 1000
+  display: none
+  float: left
+  min-width: 160px
+  padding: 5px 0
+  margin: 2px 0 0
+  font-size: 14px
+  text-align: left
+  list-style: none
+  background-color: #fff
+  -webkit-background-clip: padding-box
+  background-clip: padding-box
+  border: 1px solid #ccc
+  border: 1px solid rgba(0,0,0,.15)
+  border-radius: 4px
+  -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175)
+  box-shadow: 0 6px 12px rgba(0,0,0,.175)
+  font-size: 20px
+  border-top: solid 6px #f8af00
+
+.top-menu li#link-sup > .dropdown-toggle:hover
+  border-bottom: solid 0px white !important
+
+
+
 div.gmnoprint.gm-bundled-control.gm-bundled-control-on-bottom
   margin: 650px !important
   padding-left: -30px !important
@@ -162,6 +196,8 @@ label.size-categories
   color: #3f5f74
 
 
+//menu
+
 .top-menu
   a
     text-decoration: none
@@ -175,9 +211,13 @@ label.size-categories
   display: flex
   list-style: none
 
-.center-logo
+ul.dropdown-menu
+  margin-left: -58px
 
-  li 
+
+.top-menu
+
+  li:last-child 
     @media screen and (min-width:100px) and (max-width: 747px)
       font-size: 15px
       
@@ -200,6 +240,16 @@ label.size-categories
     &:hover:after
       width: 100%
       background: #f8af00
+
+
+
+#link-sup
+  padding-left: 30px
+  font-size: 22px
+  color: #3f5f74
+  display: inline-block
+  position: relative
+  padding-bottom: 2px
 
 
 .form-personal
