--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 head
   meta(charset='UTF-8')
   meta(name='viewport', content='initial-scale=1.0, user-scalable=no')
+  meta(http-equiv="X-UA-Compatible" content="IE=EmulateIE7")
   title Ayurveda & Yoga
   link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
   link(rel='stylesheet', href='/bower_components/hover/dist/css/bootsnipp.css')
