--- a/views/home.pug
+++ b/views/home.pug
@@ -19,7 +19,7 @@ block content
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Retiros
                   .col-xs-12  
-                    form(action='/', method='POST')
+                    form#form-home(action='/', method='POST')
                       label.label-taller.size-categories.media(for='sel1') Selecciona una categoria&nbsp; 
                         i.glyphicon.glyphicon-hand-down(width='120px')
                       select#sel1.form-control.form-personal.select-taller.col-md-1
@@ -36,7 +36,7 @@ block content
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Formaciones
                   .col-xs-12  
-                    form(action='/', method='POST')
+                    form#form-home(action='/', method='POST')
                       label.label-taller.size-categories.media(for='sel1') Selecciona una categoria&nbsp; 
                         i.glyphicon.glyphicon-hand-down(width='120px')
                       select#sel2.form-control.form-personal.select-taller.col-md-1
@@ -53,7 +53,7 @@ block content
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Talleres
                   .col-xs-12  
-                    form(action='/', method='POST')
+                    form#form-home(action='/', method='POST')
                       label.label-taller.size-categories.media(for='sel1') Selecciona una categoria&nbsp; 
                         i.glyphicon.glyphicon-hand-down(width='120px')
                       select#sel3.form-control.form-personal.select-taller.col-md-1
@@ -70,7 +70,7 @@ block content
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Conferencias
                   .col-xs-12  
-                    form(action='/', method='POST')
+                    form#form-home(action='/', method='POST')
                       label.label-taller.size-categories.media(for='sel1') Selecciona una categoria&nbsp; 
                         i.glyphicon.glyphicon-hand-down(width='120px')
                       select#sel4.form-control.form-personal.select-taller.col-md-1
@@ -87,7 +87,7 @@ block content
                 .form-group.label-taller.font-retiro
                   p.text-center.font-categories.size-title-categories Instructores 
                   .col-xs-12  
-                    form(action='/', method='POST')
+                    form#form-home(action='/', method='POST')
                       label.label-taller.size-categories.media(for='sel1') Selecciona una categoria&nbsp; 
                         i.glyphicon.glyphicon-hand-down(width='120px')
                       select#sel5.form-control.form-personal.select-taller.col-md-1
