--- a/views/layout.pug
+++ b/views/layout.pug
@@ -108,12 +108,12 @@ include includes/footer.pug
             li 
               a(href='/instructores') Instructores
       
-      div.col-xs-3
+      div.col-xs-3.mobile3
           h4 INICIO
           ul
             li 
               a(href='/') Encuentra tu camino
-    div.col-xs-4
+    div.col-xs-12
       div.copyright.col-xs-12
         p.copy
         | Copyright ® 2017, 
