--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -63,6 +63,7 @@
 
 
 
+
 div.gmnoprint.gm-bundled-control.gm-bundled-control-on-bottom
   margin: 650px !important
   padding-left: -30px !important
@@ -206,6 +207,8 @@ label.size-categories
       font-size: 15px
   @media screen and (min-width:100px) and (max-width: 725px)
     margin-top: 0px 
+  @media screen and (max-width: 375px)
+    margin-top: -42px
   margin-top: 45px
   float: right
   display: flex
@@ -294,6 +297,8 @@ div.form-group.label-taller
 
 #welcome-top
   margin-top: 10px
+  @media screen and (max-width: 375px)
+    font-size: 21px
 
 .welcome
   @media screen and (min-width:100px) and (max-width: 400px)
@@ -601,3 +606,84 @@ div.form-group.label-taller
     @media screen and (min-width:360px) and (max-width: 640px)
       padding-left: 20px
 
+li.anuncio-free 
+  @media screen and (max-width: 375px)
+    margin-top: 6px
+
+form#form-home 
+  @media screen and (max-width: 375px)
+    margin-top: -15px
+
+#sel1.form-control.form-personal.select-taller
+  @media screen and (max-width: 375px)
+  @media screen and (max-width: 414px)
+    margin-left: 7px
+    width: 195px
+
+li#link-sup 
+  @media screen and (max-width: 414px)
+    margin-top: 43px
+
+li.anuncio-free
+  @media screen and (max-width: 414px)
+    margin-top: 50px
+
+
+#welcome-top
+  @media screen and (max-width: 414px)
+    margin-top: -5px
+    font-size: 24px
+
+form#form-home
+  @media screen and (max-width: 414px) 
+    margin-top: -29px
+    margin-left: 22px
+
+.hr-line
+  @media screen and (max-width: 414px)
+    margin-top: -16px
+
+.size-title-categories
+  @media screen and (max-width: 414px)
+    font-size: 44px
+    margin-left: 10px
+
+
+#myCarousel 
+  @media screen and (max-width: 375px)
+  @media screen and (max-width: 414px)
+    margin-top: 0px
+
+.title-bot 
+  @media screen and (max-width: 375px)
+  @media screen and (max-width: 414px)
+    font-size: 28px
+
+.text-bot 
+  @media screen and (max-width: 375px)
+  @media screen and (max-width: 414px)
+    font-size: 20px
+    text-align: justify
+
+.circle-ayurveda
+  @media screen and (max-width: 375px)
+  @media screen and (max-width: 414px)
+    width: 142px
+    height: 138px
+    font-size: 27px
+
+.mobile1
+  @media screen and (max-width: 375px)
+  @media screen and (max-width: 414px)
+    padding-left: 0
+
+.mobile3
+  @media screen and (max-width: 375px)
+  @media screen and (max-width: 414px)
+    padding-left: 34px
+
+.copyright.col-xs-12 
+  @media screen and (max-width: 375px)
+  @media screen and (max-width: 414px)
+    font-size: 15px
+    margin-top: 39px
