--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -589,7 +589,7 @@ div.form-group.label-taller
   display: flex
   padding-top: 15px
   @media screen and (min-width:360px) and (max-width: 640px)
-    margin-left: 55px
+    margin-left: 0px
     padding: 0px
     display: block
 
@@ -675,15 +675,29 @@ form#form-home
 .mobile1
   @media screen and (max-width: 375px)
   @media screen and (max-width: 414px)
-    padding-left: 0
+    padding-left: 41px
+    font-size: 16px
+
+.mobile2
+  @media screen and (max-width: 375px)
+  @media screen and (max-width: 414px)
+    padding-left: 52px
+    font-size: 16px
 
 .mobile3
   @media screen and (max-width: 375px)
   @media screen and (max-width: 414px)
-    padding-left: 34px
+    padding-left: 54px
+    font-size: 16px
 
 .copyright.col-xs-12 
   @media screen and (max-width: 375px)
   @media screen and (max-width: 414px)
     font-size: 15px
     margin-top: 39px
+
+.map-food
+  @media screen and (max-width: 375px)
+    margin-left: 0px
+  @media screen and (max-width: 414px)
+    margin-left: 0px
