--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -616,17 +616,17 @@ form#form-home
 
 #sel1.form-control.form-personal.select-taller
   @media screen and (max-width: 375px)
-  @media screen and (max-width: 414px)
+  @media screen and (min-width: 414px)
     margin-left: 7px
     width: 195px
 
 li#link-sup 
-  @media screen and (max-width: 414px)
+  @media screen and (min-width: 414px)
     margin-top: 0px
 
 li.anuncio-free
 
-  @media screen and (max-width: 414px)
+  @media screen and (min-width: 414px)
     margin-top: 6px
 
 
@@ -634,74 +634,89 @@ li.anuncio-free
   @media screen and (max-width: 375px)
     margin-top: 20px !important
     font-size: 20px
-  @media screen and (max-width: 414px)
+  @media screen and (min-width: 414px)
     margin-top: -5px
     font-size: 24px
 
 form#form-home
-  @media screen and (max-width: 414px) 
+  @media screen and (min-width: 414px) 
     margin-top: -29px
     margin-left: 22px
 
 .hr-line
-  @media screen and (max-width: 414px)
+  @media screen and (min-width: 414px)
     margin-top: -16px
 
 .size-title-categories
-  @media screen and (max-width: 414px)
+  @media screen and (min-width: 414px)
     font-size: 44px
     margin-left: 10px
 
 
 #myCarousel 
   @media screen and (max-width: 375px)
-  @media screen and (max-width: 414px)
+    margin-top: 0px
+  @media screen and (min-width: 414px)
     margin-top: 0px
 
 .title-bot 
   @media screen and (max-width: 375px)
-  @media screen and (max-width: 414px)
+    font-size: 28px
+  @media screen and (min-width: 414px)
     font-size: 28px
 
 .text-bot 
   @media screen and (max-width: 375px)
-  @media screen and (max-width: 414px)
+    font-size: 20px
+    text-align: justify
+  @media screen and (min-width: 414px)
     font-size: 20px
     text-align: justify
 
 .circle-ayurveda
   @media screen and (max-width: 375px)
-  @media screen and (max-width: 414px)
+    width: 142px
+    height: 138px
+    font-size: 27px
+  @media screen and (min-width: 414px)
     width: 142px
     height: 138px
     font-size: 27px
 
 .mobile1
   @media screen and (max-width: 375px)
-  @media screen and (max-width: 414px)
+    padding-left: 41px
+    font-size: 16px
+  @media screen and (min-width: 414px)
     padding-left: 41px
     font-size: 16px
 
 .mobile2
   @media screen and (max-width: 375px)
+    padding-left: 52px
+    font-size: 16px
   @media screen and (max-width: 414px)
     padding-left: 52px
     font-size: 16px
 
 .mobile3
   @media screen and (max-width: 375px)
-  @media screen and (max-width: 414px)
+    padding-left: 54px
+    font-size: 16px
+  @media screen and (min-width: 414px)
     padding-left: 54px
     font-size: 16px
 
 .copyright.col-xs-12 
   @media screen and (max-width: 375px)
-  @media screen and (max-width: 414px)
+    font-size: 15px
+    margin-top: 39px
+  @media screen and (min-width: 414px)
     font-size: 15px
     margin-top: 39px
 
 .map-food
   @media screen and (max-width: 375px)
     margin-left: 0px
-  @media screen and (max-width: 414px)
+  @media screen and (min-width: 414px)
     margin-left: 0px
