--- a/public/css/style.css
+++ b/public/css/style.css
@@ -268,7 +268,8 @@ ul.dropdown-menu {
   color: #3f5f74;
   display: inline-block;
   position: relative;
-  padding-bottom: 2px; }
+  padding-bottom: 2px;
+  padding-top: 7px; }
 
 .form-personal {
   color: #fcf8e3 !important;
@@ -311,12 +312,6 @@ div.form-group.label-taller {
   width: 100%;
   height: 4px;
   background-color: #f8af00; }
-
-#welcome-top {
-  margin-top: 10px; }
-  @media screen and (max-width: 375px) {
-    #welcome-top {
-      font-size: 21px; } }
 
 .welcome {
   font-size: 40px;
@@ -615,38 +610,44 @@ div.form-group.label-taller {
   form#form-home {
     margin-top: -15px; } }
 
-@media screen and (min-width: 414px) {
+@media screen and (max-width: 375px) {
+  #sel1.form-control.form-personal.select-taller {
+    margin-left: 7px; } }
+@media screen and (max-width: 414px) {
   #sel1.form-control.form-personal.select-taller {
     margin-left: 7px;
     width: 195px; } }
 
-@media screen and (min-width: 414px) {
+@media screen and (max-width: 414px) {
   li#link-sup {
     margin-top: 0px; } }
 
-@media screen and (min-width: 414px) {
+@media screen and (max-width: 414px) {
   li.anuncio-free {
     margin-top: 6px; } }
 
-@media screen and (max-width: 375px) {
-  #welcome-top {
-    margin-top: 20px !important;
-    font-size: 20px; } }
-@media screen and (min-width: 414px) {
-  #welcome-top {
-    margin-top: -5px;
-    font-size: 24px; } }
+#welcome-top {
+  margin-top: 10px;
+  font-size: 40px; }
+  @media screen and (max-width: 375px) {
+    #welcome-top {
+      margin-top: 20px !important;
+      font-size: 20px; } }
+  @media screen and (max-width: 414px) {
+    #welcome-top {
+      margin-top: -5px;
+      font-size: 24px; } }
 
-@media screen and (min-width: 414px) {
+@media screen and (max-width: 414px) {
   form#form-home {
     margin-top: -29px;
     margin-left: 22px; } }
 
-@media screen and (min-width: 414px) {
+@media screen and (max-width: 414px) {
   .hr-line {
     margin-top: -16px; } }
 
-@media screen and (min-width: 414px) {
+@media screen and (max-width: 414px) {
   .size-title-categories {
     font-size: 44px;
     margin-left: 10px; } }
@@ -654,14 +655,14 @@ div.form-group.label-taller {
 @media screen and (max-width: 375px) {
   #myCarousel {
     margin-top: 0px; } }
-@media screen and (min-width: 414px) {
+@media screen and (max-width: 414px) {
   #myCarousel {
     margin-top: 0px; } }
 
 @media screen and (max-width: 375px) {
   .title-bot {
     font-size: 28px; } }
-@media screen and (min-width: 414px) {
+@media screen and (max-width: 414px) {
   .title-bot {
     font-size: 28px; } }
 
@@ -669,7 +670,7 @@ div.form-group.label-taller {
   .text-bot {
     font-size: 20px;
     text-align: justify; } }
-@media screen and (min-width: 414px) {
+@media screen and (max-width: 414px) {
   .text-bot {
     font-size: 20px;
     text-align: justify; } }
@@ -679,7 +680,7 @@ div.form-group.label-taller {
     width: 142px;
     height: 138px;
     font-size: 27px; } }
-@media screen and (min-width: 414px) {
+@media screen and (max-width: 414px) {
   .circle-ayurveda {
     width: 142px;
     height: 138px;
@@ -689,7 +690,7 @@ div.form-group.label-taller {
   .mobile1 {
     padding-left: 41px;
     font-size: 16px; } }
-@media screen and (min-width: 414px) {
+@media screen and (max-width: 414px) {
   .mobile1 {
     padding-left: 41px;
     font-size: 16px; } }
@@ -707,7 +708,7 @@ div.form-group.label-taller {
   .mobile3 {
     padding-left: 54px;
     font-size: 16px; } }
-@media screen and (min-width: 414px) {
+@media screen and (max-width: 414px) {
   .mobile3 {
     padding-left: 54px;
     font-size: 16px; } }
@@ -716,7 +717,7 @@ div.form-group.label-taller {
   .copyright.col-xs-12 {
     font-size: 15px;
     margin-top: 39px; } }
-@media screen and (min-width: 414px) {
+@media screen and (max-width: 414px) {
   .copyright.col-xs-12 {
     font-size: 15px;
     margin-top: 39px; } }
@@ -724,7 +725,7 @@ div.form-group.label-taller {
 @media screen and (max-width: 375px) {
   .map-food {
     margin-left: 0px; } }
-@media screen and (min-width: 414px) {
+@media screen and (max-width: 414px) {
   .map-food {
     margin-left: 0px; } }
 
