--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -253,6 +253,7 @@ ul.dropdown-menu
   display: inline-block
   position: relative
   padding-bottom: 2px
+  padding-top: 7px
 
 
 .form-personal
@@ -295,10 +296,6 @@ div.form-group.label-taller
   background-color: #f8af00
 
 
-#welcome-top
-  margin-top: 10px
-  @media screen and (max-width: 375px)
-    font-size: 21px
 
 .welcome
   @media screen and (min-width:100px) and (max-width: 400px)
@@ -616,39 +613,42 @@ form#form-home
 
 #sel1.form-control.form-personal.select-taller
   @media screen and (max-width: 375px)
-  @media screen and (min-width: 414px)
+    margin-left: 7px
+  @media screen and (max-width: 414px)
     margin-left: 7px
     width: 195px
 
 li#link-sup 
-  @media screen and (min-width: 414px)
+  @media screen and (max-width: 414px)
     margin-top: 0px
 
 li.anuncio-free
 
-  @media screen and (min-width: 414px)
+  @media screen and (max-width: 414px)
     margin-top: 6px
 
-
+// titulo de la home
 #welcome-top
+  margin-top: 10px
+  font-size: 40px 
   @media screen and (max-width: 375px)
     margin-top: 20px !important
     font-size: 20px
-  @media screen and (min-width: 414px)
+  @media screen and (max-width: 414px)
     margin-top: -5px
     font-size: 24px
 
 form#form-home
-  @media screen and (min-width: 414px) 
+  @media screen and (max-width: 414px) 
     margin-top: -29px
     margin-left: 22px
 
 .hr-line
-  @media screen and (min-width: 414px)
+  @media screen and (max-width: 414px)
     margin-top: -16px
 
 .size-title-categories
-  @media screen and (min-width: 414px)
+  @media screen and (max-width: 414px)
     font-size: 44px
     margin-left: 10px
 
@@ -656,20 +656,20 @@ form#form-home
 #myCarousel 
   @media screen and (max-width: 375px)
     margin-top: 0px
-  @media screen and (min-width: 414px)
+  @media screen and (max-width: 414px)
     margin-top: 0px
 
 .title-bot 
   @media screen and (max-width: 375px)
     font-size: 28px
-  @media screen and (min-width: 414px)
+  @media screen and (max-width: 414px)
     font-size: 28px
 
 .text-bot 
   @media screen and (max-width: 375px)
     font-size: 20px
     text-align: justify
-  @media screen and (min-width: 414px)
+  @media screen and (max-width: 414px)
     font-size: 20px
     text-align: justify
 
@@ -678,7 +678,7 @@ form#form-home
     width: 142px
     height: 138px
     font-size: 27px
-  @media screen and (min-width: 414px)
+  @media screen and (max-width: 414px)
     width: 142px
     height: 138px
     font-size: 27px
@@ -687,7 +687,7 @@ form#form-home
   @media screen and (max-width: 375px)
     padding-left: 41px
     font-size: 16px
-  @media screen and (min-width: 414px)
+  @media screen and (max-width: 414px)
     padding-left: 41px
     font-size: 16px
 
@@ -703,7 +703,7 @@ form#form-home
   @media screen and (max-width: 375px)
     padding-left: 54px
     font-size: 16px
-  @media screen and (min-width: 414px)
+  @media screen and (max-width: 414px)
     padding-left: 54px
     font-size: 16px
 
@@ -711,12 +711,12 @@ form#form-home
   @media screen and (max-width: 375px)
     font-size: 15px
     margin-top: 39px
-  @media screen and (min-width: 414px)
+  @media screen and (max-width: 414px)
     font-size: 15px
     margin-top: 39px
 
 .map-food
   @media screen and (max-width: 375px)
     margin-left: 0px
-  @media screen and (min-width: 414px)
+  @media screen and (max-width: 414px)
     margin-left: 0px
