--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,11 +88,21 @@ h2.title-find {
   display: flex;
   margin: auto;
   margin-bottom: 21px; }
+  @media screen and (min-width: 414px) {
+    h2.title-find {
+      font-size: 12px;
+      margin-top: 22px;
+      margin-left: -100px;
+      margin-bottom: 0px !important; } }
   @media screen and (min-width: 100px) and (max-width: 535px) {
     h2.title-find {
       font-size: 12px;
       margin-top: 22px;
-      margin-left: -100px; } }
+      margin-left: -100px;
+      margin-bottom: 0px; } }
+  @media screen and (min-width: 768px) {
+    h2.title-find {
+      margin-bottom: -32px !important; } }
 
 .search {
   margin-left: -13px !important;
@@ -245,6 +255,9 @@ ul.dropdown-menu {
   display: inline-block;
   position: relative;
   padding-bottom: 2px; }
+  @media screen and (max-width: 414px) {
+    .top-menu li:last-child {
+      padding-top: 46px; } }
   @media screen and (min-width: 100px) and (max-width: 747px) {
     .top-menu li:last-child {
       font-size: 15px; } }
@@ -270,6 +283,9 @@ ul.dropdown-menu {
   position: relative;
   padding-bottom: 2px;
   padding-top: 7px; }
+  @media screen and (max-width: 414px) {
+    #link-sup {
+      padding-top: 41px; } }
 
 .form-personal {
   color: #fcf8e3 !important;
@@ -624,7 +640,7 @@ div.form-group.label-taller {
 
 @media screen and (max-width: 414px) {
   li.anuncio-free {
-    margin-top: 6px; } }
+    margin-top: 0px; } }
 
 #welcome-top {
   margin-top: 10px;
@@ -635,8 +651,8 @@ div.form-group.label-taller {
       font-size: 20px; } }
   @media screen and (max-width: 414px) {
     #welcome-top {
-      margin-top: -5px;
-      font-size: 24px; } }
+      margin-top: -22px;
+      font-size: 21px; } }
 
 @media screen and (max-width: 414px) {
   form#form-home {
