--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -88,10 +88,18 @@ h2.title-find
   display: flex
   margin: auto
   margin-bottom: 21px
+  @media screen and (min-width:414px)
+    font-size: 12px
+    margin-top: 22px
+    margin-left: -100px
+    margin-bottom: 0px !important
   @media screen and (min-width:100px) and (max-width: 535px)
     font-size: 12px
     margin-top: 22px
     margin-left: -100px
+    margin-bottom: 0px
+  @media screen and (min-width: 768px)
+    margin-bottom: -32px !important
 .search
   margin-left: -13px !important
   border-radius: 2px !important
@@ -221,6 +229,8 @@ ul.dropdown-menu
 .top-menu
 
   li:last-child 
+    @media screen and (max-width: 414px)
+      padding-top: 46px
     @media screen and (min-width:100px) and (max-width: 747px)
       font-size: 15px
       
@@ -254,6 +264,8 @@ ul.dropdown-menu
   position: relative
   padding-bottom: 2px
   padding-top: 7px
+  @media screen and (max-width: 414px)
+    padding-top: 41px
 
 
 .form-personal
@@ -625,7 +637,7 @@ li#link-sup
 li.anuncio-free
 
   @media screen and (max-width: 414px)
-    margin-top: 6px
+    margin-top: 0px
 
 // titulo de la home
 #welcome-top
@@ -635,8 +647,9 @@ li.anuncio-free
     margin-top: 20px !important
     font-size: 20px
   @media screen and (max-width: 414px)
-    margin-top: -5px
-    font-size: 24px
+    margin-top: -22px
+    font-size: 21px
+ 
 
 form#form-home
   @media screen and (max-width: 414px) 
