--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,7 +102,9 @@ h2.title-find {
       margin-bottom: -20px; } }
   @media screen and (min-width: 768px) {
     h2.title-find {
-      margin-bottom: -32px !important; } }
+      margin-bottom: -32px;
+      margin-left: 38px;
+      margin-top: 22px; } }
 
 .search {
   margin-left: -13px !important;
