--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -99,7 +99,9 @@ h2.title-find
     margin-left: -100px
     margin-bottom: -20px
   @media screen and (min-width: 768px)
-    margin-bottom: -32px !important
+    margin-bottom: -32px
+    margin-left: 38px
+    margin-top: 22px
 .search
   margin-left: -13px !important
   border-radius: 2px !important
