--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -1,3 +1,7 @@
+body
+  background-image: url('../img/mandala.gif')  
+  max-width: 100%
+
 .ino
   margin-top: 24px
   position: absolute
@@ -32,7 +36,7 @@
 
 
 .hover_menu
-  display:block
+  display: block
 
 .dropdown-menu
   position: absolute
@@ -88,7 +92,8 @@ h2.title-find
   display: flex
   margin: auto
   margin-bottom: 21px
-  @media screen and (min-width:414px)
+  font-size: 25px 
+  @media screen and (max-width:414px)
     font-size: 12px
     margin-top: 22px
     margin-left: -100px
@@ -98,7 +103,7 @@ h2.title-find
     margin-top: 22px
     margin-left: -100px
     margin-bottom: -20px
-  @media screen and (min-width: 768px)
+  @media screen and (max-width: 768px)
     margin-bottom: -32px
     margin-left: 38px
     margin-top: 22px
@@ -735,3 +740,6 @@ form#form-home
     margin-left: 0px
   @media screen and (max-width: 414px)
     margin-left: 0px
+
+.mandala
+  opacity: 1.5
