--- a/views/home.pug
+++ b/views/home.pug
@@ -129,12 +129,16 @@ block content
       p.text-bot| "Ayurveda, yoga y tantra son las disciplinas de la vida que se han practicado en la India durante siglos. El propósito de cada práctica es ayudar al individuo a conseguir longevidad, rejuvenecimiento y autorrealización."
     .col-sm-4
       .col-sm-12
-        div.circle-ayurveda.font-categories|  Ayurveda
+        div
+          img.img-responsive.mandala(src='../img/mandala_ayurveda.gif' width='265px') 
     .col-sm-4
       .col-sm-12
-        div.circle-ayurveda.font-categories|  Yoga
+        //- div.circle-ayurveda.font-categories|  Yoga
+        div
+          img.img-responsive.mandala(src='../img/mandala_yoga.gif' width='265px') 
     .col-sm-4
       .col-sm-12
-        div.circle-ayurveda.font-categories|  Tantra
+        div
+          img.img-responsive.mandala(src='../img/mandala_tantra.gif' width='265px') 
     
           
