--- a/views/home.pug
+++ b/views/home.pug
@@ -130,15 +130,15 @@ block content
     .col-sm-4
       .col-sm-12
         div
-          img.img-responsive.mandala(src='../img/mandala_ayurveda.gif' width='265px') 
+          img.img-responsive.mandala(src='../img/mandala_ayurveda.jpg' width='265px') 
     .col-sm-4
       .col-sm-12
         //- div.circle-ayurveda.font-categories|  Yoga
         div
-          img.img-responsive.mandala(src='../img/mandala_yoga.gif' width='265px') 
+          img.img-responsive.mandala(src='../img/mandala_yoga.jpg' width='265px') 
     .col-sm-4
       .col-sm-12
         div
-          img.img-responsive.mandala(src='../img/mandala_tantra.gif' width='265px') 
+          img.img-responsive.mandala(src='../img/mandala_tantra.jpg' width='265px') 
     
           
