updates new design home

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {
-  background-image: url("../img/mandala_body.jpg");
+  background-image: url("../img/mandalaBody.gif");
   max-width: 100%; }
 
 .ino {
