--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -1,5 +1,5 @@
 body
-  background-image: url('../img/mandalaBody.gif')  
+  background-image: url('../img/mandalaBody.jpg')  
   max-width: 100%
 
 .ino
