--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 body {
-  background-image: url("../img/mandalaBody.jpg");
-  max-width: 100%; }
+  background-image: url("../img/mandalaBody.gif");
+  max-width: 10gif; }
 
 .ino {
   margin-top: 24px;
