--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -1,7 +1,6 @@
 body
-  background-image: url('../img/mandalaBody.jpg')  
-  max-width: 100%
-
+  background-image: url('../img/mandalaBody.gif')  
+  max-width: 10gif
 .ino
   margin-top: 24px
   position: absolute
