new design home

--- a/views/home.pug
+++ b/views/home.pug
@@ -130,15 +130,15 @@ block content
     .col-sm-4
       .col-sm-12
         div
-          img.img-responsive.mandala(src='../img/mandalaTantra.png' width='265px') 
+          img.img-responsive.mandala(src='../img/mandalaAyurveda.gif' width='265px') 
     .col-sm-4
       .col-sm-12
         //- div.circle-ayurveda.font-categories|  Yoga
         div
-          img.img-responsive.mandala(src='../img/mandalaYoga.png' width='265px') 
+          img.img-responsive.mandala(src='../img/mandalaYoga.gif' width='265px') 
     .col-sm-4
       .col-sm-12
         div
-          img.img-responsive.mandala(src='../img/mandalaAyurveda.png' width='265px') 
+          img.img-responsive.mandala(src='../img/mandalaTantra.gif' width='265px') 
     
           
