--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -1,6 +1,6 @@
 body
   background-image: url('../img/mandalaBody.gif')  
-  max-width: 10gif
+  max-width: 10
 .ino
   margin-top: 24px
   position: absolute
@@ -104,7 +104,7 @@ h2.title-find
     margin-bottom: -20px
   @media screen and (max-width: 768px)
     margin-bottom: -32px
-    margin-left: 38px
+    margin-left: -102px
     margin-top: 22px
 .search
   margin-left: -13px !important
@@ -236,7 +236,7 @@ ul.dropdown-menu
 
   li:last-child 
     @media screen and (max-width: 414px)
-      padding-top: 46px
+      padding-top: 17px
     @media screen and (min-width:100px) and (max-width: 747px)
       font-size: 15px
       
@@ -272,6 +272,8 @@ ul.dropdown-menu
   padding-top: 7px
   @media screen and (max-width: 414px)
     padding-top: 41px
+  @media screen and (max-width: 375px)
+    padding-top: 10px
 
 
 .form-personal
@@ -335,7 +337,7 @@ div.form-group.label-taller
 .navbar
   
   @media screen and (min-width:100px) and (max-width: 535px)
-    max-height: 170px
+  max-height: 84px
   margin-bottom: 0px !important
 
 
