--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -236,6 +236,8 @@ ul.dropdown-menu
 
   li:last-child 
     @media screen and (max-width: 414px)
+      padding-top: 46px
+    @media screen and (max-width: 375px)
       padding-top: 17px
     @media screen and (min-width:100px) and (max-width: 747px)
       font-size: 15px
